Fixed navbar to top on all pages,Added padding to body to prevent overlap with other elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,16 @@
 .nav-link-group{
     text-align: center;
 }
+
+body{
+    padding-top:86px;
+}
+
+@media only screen and (max-width: 500px){
+body{
+    padding-top:56px;
+}
+}
 /* NavBar End */
 
 
